Fixed backward search and LuaSnips
Also added some extra snips

--- a/test.tex
+++ b/test.tex
@@ -1,16 +1,28 @@
-
 This is a test for my sum 
 
 \begin{equation}
-    WTF
+    abc  
 \end{equation}	
 
 
 \begin{equation}
-    x^2 + y^2
+    x^2 + y^2 
 \end{equation}
 
 
+\[ a^{2}_{c}  \]
+
+This is \textbf{bold text}.
+
+\[ a^{2} + b^{2} + \]
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{banana_2}
+	\caption{caption}
+	\label{fig:label}
+\end{figure}
+
 \begin{test}
    widwdw 
-\end{test}
+\end{test} 
