Fixed some options

--- a/test.tex
+++ b/test.tex
@@ -6,19 +6,25 @@ This is a test for my sum
 
 
 \begin{equation}
-    x^2 + y^2 
+    x^2 + y^2 + c^{2}
 \end{equation}
 
+\begin{eq}
+		
+\end{eq}
 
-\[ a^{2}_{c}  \]
+
+\[ a^{2}_{c} \]
 
 This is \textbf{bold text}.
 
-\[ a^{2} + b^{2} + \]
+\[ a^{2} + b^{2} +   \]
+
+\begin{equation}
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.8\textwidth]{banana_2}
+	\includegraphics[width=0.8\textwidth]{test.png}
 	\caption{caption}
 	\label{fig:label}
 \end{figure}
